--- a/Authorization.Core.UI/Areas/Authorization/Pages/_ViewImports.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@namespace Fricke.Authorization.Core.UI.Pages
+﻿@namespace CRFricke.Authorization.Core.UI.Pages
 @inject Authorization.Core.IAuthorizationManager AuthManager
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
