Added virtual SeedDatabase() method to each DbContext (allows each component to verify their seed data during application startup).
Renamed AppDbContext, AppRole, and AppUser classes in the Core.UI project to AuthUiContext, AuthUiRole, and AuthUiUser respectively.

--- a/Authorization.Core.UI.Test.Web/Pages/Shared/_LoginPartial.cshtml
+++ b/Authorization.Core.UI.Test.Web/Pages/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using CRFricke.Authorization.Core.UI.Data
 @using Microsoft.AspNetCore.Identity
-@inject SignInManager<AppUser> SignInManager
-@inject UserManager<AppUser> UserManager
+@inject SignInManager<AuthUiUser> SignInManager
+@inject UserManager<AuthUiUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
