- Add CRFricke.EF.Core.Utilities package to handle database initialization. - No longer specify DbContext in AddAccessRightBasedAuthorization extension method (use value configured in AddEntityFrameworkStores extension method instead). - Add ApplicationRole and ApplicationUser classes to Web project. - Update documentation.

--- a/Authorization.Core.UI.Test.Web/Pages/Shared/_LoginPartial.cshtml
+++ b/Authorization.Core.UI.Test.Web/Pages/Shared/_LoginPartial.cshtml
@@ -1,7 +1,6 @@
-﻿@using CRFricke.Authorization.Core.UI.Data
-@using Microsoft.AspNetCore.Identity
-@inject SignInManager<AuthUiUser> SignInManager
-@inject UserManager<AuthUiUser> UserManager
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
