Add _Layout and Index files to expose Role and User Management pages in test web app.

--- a/Authorization.Core.UI.Test.Web/Areas/Identity/Pages/_ViewStart.cshtml
+++ b/Authorization.Core.UI.Test.Web/Areas/Identity/Pages/_ViewStart.cshtml
@@ -1,3 +1,7 @@
 ﻿@{
-    Layout = "/Pages/Shared/_Layout.cshtml";
+    var returnUrl = Context.Request.Query["returnUrl"].FirstOrDefault() ?? "/";
+    
+    Layout = (returnUrl.Contains("Admin"))
+        ? "/Areas/Admin/Pages/Shared/_Layout.cshtml"
+        : "/Pages/Shared/_Layout.cshtml";
 }
