--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Delete.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Delete.cshtml
@@ -18,22 +18,6 @@
     <environment exclude="Development">
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs5/dt-1.11.4/datatables.min.css" />
     </environment>
-
-    <style>
-        .col-properties {
-            min-width: 25rem;
-            max-width: 30rem;
-        }
-
-        .col-role-table {
-            min-width: 25rem;
-            max-width: 35rem;
-        }
-
-        .form-floating textarea.form-control {
-            height: 10rem;
-        }
-    </style>
 }
 
 <div class="row align-items-center">
@@ -47,74 +31,71 @@
         <hr class="mt-2" />
     </div>
 </div>
-<div class="row mx-sm-1">
-    <div class="col-12">
+<form id="formDelete" method="post">
+    <div class="row">
         <div asp-validation-summary="ModelOnly" class="col-12 text-danger"></div>
-    </div>
-    <div class="col col-properties me-sm-5 mb-3">
-        <h5 class="text-muted">The role's properties:</h5>
-        <hr />
-        <div class="form-floating">
-            <input asp-for="RoleModel.Id" class="form-control" disabled />
-            <label asp-for="RoleModel.Id" class="control-label"></label>
-        </div>
-        <div class="form-floating">
-            <input asp-for="RoleModel.Name" class="form-control" disabled />
-            <label asp-for="RoleModel.Name" class="control-label"></label>
-        </div>
-        <div class="form-floating">
-            <textarea asp-for="RoleModel.Description" class="form-control" disabled ></textarea>
-            <label asp-for="RoleModel.Description" class="control-label"></label>
-        </div>
-    </div>
-    <div class="col col-role-table">
-        <h5 class="text-muted text-center mb-3">Users assigned to this role:</h5>
-        <hr />
-        <div class="mx-auto">
-            <table class="table table-sm" data-order='[[1,"asc"]]'>
-                <thead>
-                    <tr>
-                        <th><label asp-for="RoleModel.RoleUsers.ElementAt(0).Email"></label></th>
-                        <th><label asp-for="RoleModel.RoleUsers.ElementAt(0).Name"></label></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @{
-                        foreach (var user in Model.RoleModel.RoleUsers)
-                        {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(x => user.Email)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(x => user.Name)
-                                </td>
-                            </tr>
-                        }
-                    }
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
-<div class="row mx-sm-1">
-    <div class="col">
-        <form id="formDelete" method="post">
+        <div class="col col-properties me-sm-5 mb-3">
+            <h5 class="text-muted">The role's properties:</h5>
+            <hr />
             <input type="hidden" asp-for="IsSystemRole" />
-            <input type="hidden" asp-for="RoleModel.Id" />
-            <input type="hidden" asp-for="RoleModel.Name" />
-            <div class="row align-items-center">
+            <div class="form-floating">
+                <input class="form-control" type="text" value="@Model.RoleModel.Id" disabled />
+                <label asp-for="RoleModel.Id" class="control-label"></label>
+            </div>
+            <div class="form-floating">
+                <input class="form-control" value="@Model.RoleModel.Name" disabled />
+                <label asp-for="RoleModel.Name" class="control-label"></label>
+            </div>
+            <div class="form-floating mb-3">
+                <textarea class="form-control textarea-tall" disabled>@Model.RoleModel.Description</textarea>
+                <label asp-for="RoleModel.Description" class="control-label"></label>
+            </div>
+            <div>
+            </div>
+            <div class="row d-none d-sm-block align-items-center mt-3">
                 <div class="col-auto">
-                    <input id="btnDelete" type="submit" value="Delete" class="btn btn-primary" @btnDeleteAttr />
-                </div>
-                <div class="col-auto px-0">|</div>
-                <div class="col-auto">
-                    <a asp-page="./Index">Back to List</a>
+                    <input class="btn btn-primary" id="btnDelete" type="submit" value="Delete" @btnDeleteAttr />
+                    <a class="btn btn-secondary" asp-page="Index">Cancel</a>
                 </div>
             </div>
-        </form>
+        </div>
+        <div class="col col-users">
+            <h5 class="text-muted text-center mb-3">Users assigned to this role:</h5>
+            <hr />
+            <div class="mx-auto">
+                <table class="table table-sm" data-order='[[1,"asc"]]'>
+                    <thead>
+                        <tr>
+                            <th><label asp-for="RoleModel.RoleUsers.ElementAt(0).Email"></label></th>
+                            <th><label asp-for="RoleModel.RoleUsers.ElementAt(0).Name"></label></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @{
+                            foreach (var user in Model.RoleModel.RoleUsers)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(x => user.Email)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(x => user.Name)
+                                    </td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
+            </div>
+            <div class="row d-block d-sm-none align-items-center mt-3">
+                <div class="col-auto">
+                    <input class="btn btn-primary" id="btnDelete" type="submit" value="Delete" @btnDeleteAttr />
+                    <a class="btn btn-secondary" asp-page="Index">Cancel</a>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+</form>
 
 @section Scripts {
 
