--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Details.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Details.cshtml
@@ -18,22 +18,6 @@
     <environment exclude="Development">
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs5/dt-1.11.4/datatables.min.css" />
     </environment>
-
-    <style>
-        .col-properties {
-            min-width: 25rem;
-            max-width: 30rem;
-        }
-
-        .col-role-claims {
-            min-width: 25rem;
-            max-width: 35rem;
-        }
-
-        .form-floating textarea.form-control {
-            height: 10rem;
-        }
-    </style>
 }
 
 <div class="row">
@@ -47,31 +31,28 @@
         <h5 class="text-muted">The role's properties:</h5>
         <hr />
         <div class="form-floating">
-            <input asp-for="RoleModel.Id" class="form-control" disabled />
-            <label asp-for="RoleModel.Id" class="control-label"></label>
+            <input class="form-control" id="RoleModel_Id" type="text" value="@Model.RoleModel.Id" disabled />
+            <label class="control-label" asp-for="RoleModel.Id"></label>
         </div>
         <div class="form-floating">
-            <input asp-for="RoleModel.Name" class="form-control" disabled />
-            <label asp-for="RoleModel.Name" class="control-label"></label>
+            <input class="form-control" id="RoleModel_Name" type="text" value="@Model.RoleModel.Name" disabled />
+            <label class="control-label" asp-for="RoleModel.Name"></label>
         </div>
         <div class="form-floating mb-3">
-            <textarea asp-for="RoleModel.Description" class="form-control" disabled ></textarea>
-            <label asp-for="RoleModel.Description" class="control-label"></label>
+            <textarea class="form-control textarea-tall" id="RoleModel_Description" disabled>@Model.RoleModel.Description</textarea>
+            <label class="control-label" asp-for="RoleModel.Description"></label>
         </div>
-        <div class="row mx-sm-1">
+        <div class="row d-none d-sm-block align-items-center mt-3">
             <div class="col-auto">
-                <a class="@classEdit" asp-page="./Edit" asp-route-id="@Model.RoleModel.Id">Edit</a>
-            </div>
-            <div class="col-auto px-0">|</div>
-            <div class="col-auto">
-                <a asp-page="./Index">Back to List</a>
+                <a class="btn btn-primary @classEdit" asp-page="./Edit" asp-route-id="@Model.RoleModel.Id">Edit</a>
+                <a class="btn btn-secondary" asp-page="Index">Cancel</a>
             </div>
         </div>
     </div>
-    <div class="col col-role-claims">
+    <div class="col col-claims">
         <h5 class="text-center text-muted mb-3">The role's claim assignments:</h5>
         <hr />
-        <div class="mx-auto">
+        <div class="row mx-auto">
             <table class="table table-sm" data-order='[[1,"asc"]]'>
                 <thead>
                     <tr>
@@ -97,6 +78,12 @@
                     }
                 </tbody>
             </table>
+        </div>
+        <div class="row d-block d-sm-none align-items-center mt-3">
+            <div class="col-auto">
+                <a class="btn btn-primary @classEdit" asp-page="./Edit" asp-route-id="@Model.RoleModel.Id">Edit</a>
+                <a class="btn btn-secondary" asp-page="Index">Cancel</a>
+            </div>
         </div>
     </div>
 </div>
