--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Create.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Create.cshtml
@@ -12,13 +12,6 @@
     <environment exclude="Development">
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs5/dt-1.11.4/datatables.min.css" />
     </environment>
-
-    <style>
-        .col-properties {
-            min-width: 25rem;
-            max-width: 30rem;
-        }
-    </style>
 }
 
 <div class="row">
@@ -27,101 +20,97 @@
         <hr />
     </div>
 </div>
-<div class="row mx-sm-1">
-    <div class="col">
-        <form id="formCreate" method="post">
-            <div class="row">
-                <div asp-validation-summary="ModelOnly" class="col-12 text-danger"></div>
-                <div class="col-auto col-properties me-sm-5 mb-3">
-                    <h5 class="text-muted">Enter the user's details:</h5>
-                    <hr />
-                    <div class="form-floating">
-                        <input asp-for="UserModel.Email" class="form-control" autocomplete="email" aria-required="true"/>
-                        <label asp-for="UserModel.Email" class="control-label"></label>
-                        <span asp-validation-for="UserModel.Email" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating">
-                        <input asp-for="UserModel.Password" class="form-control" autocomplete="new-password" aria-required="true"/>
-                        <label asp-for="UserModel.Password" class="control-label"></label>
-                        <span asp-validation-for="UserModel.Password" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating">
-                        <input asp-for="UserModel.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true"/>
-                        <label asp-for="UserModel.ConfirmPassword" class="control-label"></label>
-                        <span asp-validation-for="UserModel.ConfirmPassword" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating">
-                        <input asp-for="UserModel.GivenName" class="form-control" />
-                        <label asp-for="UserModel.GivenName" class="control-label"></label>
-                        <span asp-validation-for="UserModel.GivenName" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating">
-                        <input asp-for="UserModel.Surname" class="form-control" />
-                        <label asp-for="UserModel.Surname" class="control-label"></label>
-                        <span asp-validation-for="UserModel.Surname" class="text-danger"></span>
-                    </div>
-                    <div class="form-floating">
-                        <input asp-for="UserModel.PhoneNumber" class="form-control" />
-                        <label asp-for="UserModel.PhoneNumber" class="control-label"></label>
-                        <span asp-validation-for="UserModel.PhoneNumber" class="text-danger"></span>
-                    </div>
-                    <div class="form-check">
-                        <label class="form-check-label">
-                            <input class="form-check-input" asp-for="UserModel.LockoutEnabled" /> @Html.DisplayNameFor(model => model.UserModel.LockoutEnabled)
-                        </label>
-                    </div>
-                </div>
-                <div class="col">
-                    <h5 class="text-muted text-center mb-3">Select the user's role assignments:</h5>
-                    <hr />
-                    <div class="mx-auto">
-                        <table class="table table-sm" data-order='[[1,"asc"]]'>
-                            <thead>
+<form id="formCreate" method="post">
+    <div class="row">
+        <div asp-validation-summary="ModelOnly" class="col-12 text-danger"></div>
+        <div class="col-auto col-properties me-sm-5 mb-3">
+            <h5 class="text-muted">Enter the user's details:</h5>
+            <hr />
+            <div class="form-floating">
+                <input class="form-control" asp-for="Input.Email" autocomplete="email" aria-required="true" />
+                <label class="control-label" asp-for="Input.Email"></label>
+                <span class="text-danger" asp-validation-for="Input.Email"></span>
+            </div>
+            <div class="form-floating">
+                <input class="form-control" asp-for="Input.Password" autocomplete="new-password" aria-required="true" />
+                <label class="control-label" asp-for="Input.Password"></label>
+                <span class="text-danger" asp-validation-for="Input.Password"></span>
+            </div>
+            <div class="form-floating">
+                <input class="form-control" asp-for="Input.ConfirmPassword" autocomplete="new-password" aria-required="true" />
+                <label class="control-label" asp-for="Input.ConfirmPassword"></label>
+                <span class="text-danger" asp-validation-for="Input.ConfirmPassword"></span>
+            </div>
+            <div class="form-floating">
+                <input class="form-control" asp-for="Input.GivenName" autocomplete="given-name" />
+                <label class="control-label" asp-for="Input.GivenName"></label>
+                <span class="text-danger" asp-validation-for="Input.GivenName"></span>
+            </div>
+            <div class="form-floating">
+                <input class="form-control" asp-for="Input.Surname" autocomplete="family-name" />
+                <label class="control-label" asp-for="Input.Surname"></label>
+                <span class="text-danger" asp-validation-for="Input.Surname"></span>
+            </div>
+            <div class="form-floating">
+                <input class="form-control" asp-for="Input.PhoneNumber" autocomplete="tel" />
+                <label class="control-label" asp-for="Input.PhoneNumber"></label>
+                <span class="text-danger" asp-validation-for="Input.PhoneNumber"></span>
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="Input.LockoutEnabled" />
+                    @Html.DisplayNameFor(model => model.Input.LockoutEnabled)
+                </label>
+            </div>
+            <div class="col-auto d-none d-sm-block align-items-center mt-3">
+                <input class="btn btn-primary" id="btnCreate" type="submit" value="Create" />
+                <a class="btn btn-secondary" asp-page="Index">Cancel</a>
+            </div>
+        </div>
+        <div class="col col-roles mb-3">
+            <h5 class="text-muted text-center mb-3">Select the user's role assignments:</h5>
+            <hr />
+            <div class="mx-auto">
+                <table class="table table-sm" data-order='[[1,"asc"]]'>
+                    <thead>
+                        <tr>
+                            <th class="col-auto" id="thSelect" data-orderable="false">
+                                <label asp-for="Input.Roles.ElementAt(0).IsAssigned"></label>
+                            </th>
+                            <th><label asp-for="Input.Roles.ElementAt(0).Name"></label></th>
+                            <th><label asp-for="Input.Roles.ElementAt(0).Description"></label></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @{
+                            foreach (var role in Model.Input.Roles)
+                            {
+                                var checkedVal = (role.IsAssigned) ? "checked" : "";
                                 <tr>
-                                    <th id="thSelect" class="col-auto" data-orderable="false">
-                                        <label asp-for="UserModel.Roles.ElementAt(0).IsAssigned"></label>
-                                    </th>
-                                    <th><label asp-for="UserModel.Roles.ElementAt(0).Name"></label></th>
-                                    <th><label asp-for="UserModel.Roles.ElementAt(0).Description"></label></th>
+                                    <td class="align-middle">
+                                        <input class="form-check ms-3" type="checkbox" @checkedVal />
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(x => role.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(x => role.Description)
+                                    </td>
                                 </tr>
-                            </thead>
-                            <tbody>
-                                @{
-                                    foreach (var role in Model.UserModel.Roles)
-                                    {
-                                        var checkedVal = (role.IsAssigned) ? "checked" : "";
-                                        <tr>
-                                            <td class="align-middle">
-                                                <input class="form-check ms-3" type="checkbox" @checkedVal />
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(x => role.Name)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(x => role.Description)
-                                            </td>
-                                        </tr>
-                                    }
-                                }
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+                            }
+                        }
+                    </tbody>
+                </table>
             </div>
-            <div class="row align-items-center mb-3">
-                <div class="col-auto">
-                    <input id="btnCreate" type="submit" value="Create" class="btn btn-primary" />
-                </div>
-                <div class="col-auto px-0">|</div>
-                <div class="col-auto">
-                    <a asp-page="Index">Back to List</a>
-                </div>
+            <div class="col-auto d-block d-sm-none align-items-center mt-3">
+                <input class="btn btn-primary" id="btnCreate" type="submit" value="Create" />
+                <a class="btn btn-secondary" asp-page="Index">Cancel</a>
             </div>
+        </div>
 
-            <input id="hfRoleList" name="hfRoleList" type="hidden" value="" />
-        </form>
+        <input id="hfRoleList" name="hfRoleList" type="hidden" value="" />
     </div>
-</div>
+</form>
 
 @section Scripts {
 
