--- a/Authorization.Core.UI.Test.Web/Pages/Shared/_Layout.cshtml
+++ b/Authorization.Core.UI.Test.Web/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Admin" asp-page="/Index">Administration</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
