Fix incorrect label on Email control of User/Details page.

--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Details.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/User/Details.cshtml
@@ -33,7 +33,7 @@
         </div>
         <div class="form-floating">
             <input class="form-control" id="UserModel_Email" type="text" value="@Model.UserModel.Email" disabled />
-            <label class="control-label"> asp-for="UserModel.Email"</label>
+            <label class="control-label" asp-for="UserModel.Email"></label>
         </div>
         <div class="form-floating">
             <input class="form-control" id="UserModel_GivenName" type="text" value="@Model.UserModel.GivenName" disabled />
