--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Delete.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Delete.cshtml
@@ -3,11 +3,11 @@
 @{
     ViewData["Title"] = "Delete Role";
 
-    var message = Model.IsSystemRole
+    var message = Model.RoleModel.IsSystemRole
         ? "System Roles may not be deleted!"
         : "Are you sure you want to delete this role?";
 
-    var btnDeleteAttr = Model.IsSystemRole ? "disabled" : "";
+    var btnDeleteAttr = Model.RoleModel.IsSystemRole ? "disabled" : "";
 }
 
 <div class="row align-items-center">
@@ -27,7 +27,7 @@
         <div class="col col-properties me-sm-5 mb-3">
             <h5 class="text-muted">The role's properties:</h5>
             <hr />
-            <input type="hidden" asp-for="IsSystemRole" />
+            <input type="hidden" asp-for="RoleModel.IsSystemRole" />
             <input type="hidden" asp-for="RoleModel.Name" />
             <div class="form-floating">
                 <input class="form-control" type="text" value="@Model.RoleModel.Id" disabled />
