--- a/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Index.cshtml
+++ b/Authorization.Core.UI/Areas/Authorization/Pages/V5/Role/Index.cshtml
@@ -27,16 +27,16 @@
             <thead>
                 <tr>
                     <th>
-                        @Html.DisplayNameFor(model => model.Roles[0].Name)
+                        @Html.DisplayNameFor(model => model.RoleInfo[0].Name)
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Roles[0].Description)
+                        @Html.DisplayNameFor(model => model.RoleInfo[0].Description)
                     </th>
                     <th data-orderable="false"></th>
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model.Roles)
+                @foreach (var item in Model.RoleInfo)
                 {
                     <tr>
                         <td>
